# node-osrm

./: .gitignore  .npmignore  .travis.yml  API.md  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  binding.gyp  bootstrap.sh  circle.yml  common.gypi  configure  package.json
cmake/: NodeJS.cmake
docker/: Dockerfile  build-image.sh  run-clang.sh  run-g++.sh  test.sh
docs/: api.md  config.json  index.html  releasing.md
docs/api/: index.html
docs/assets/: style.css
example/: server.js
lib/: index.js  osrm.js
profiles/: Makefile
scripts/: build.sh  install_node.sh  is_pr_merge.sh  localize.sh  locally_package.sh  publish.sh  setup_compiler.sh  setup_mason.sh  shared_build.sh  static_build.sh  travis_helper.sh  validate_tag.sh
src/: engine.hpp  json_v8_renderer.hpp  node_osrm.cpp  node_osrm.hpp  node_osrm_support.hpp  options.hpp  program_options.hpp  query.hpp
test/: index.js  match.js  nearest.js  osrm-data-path.js  osrm.test.js  route.js  table.js  tile.js  trip.js
test/data/: Makefile  berlin.ini  car.lua  data.md5sum  md5sum.js  references-corrupt-files.ini  references-missing-files.ini
util/: shared_build.sh  static_build.sh  ubuntu_precise_build.sh
